--- a/index.html
+++ b/index.html
@@ -1,52 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Gitfolio</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="A personal portfolio automatically generated from your GitHub profile."
+      content="Professional portfolio showcasing my projects and skills"
     />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="16x16" />
+    <meta
+      name="keywords"
+      content="developer, portfolio, github, projects, web development"
+    />
+    <meta name="author" content="" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Portfolio" />
+    <meta
+      property="og:description"
+      content="Professional portfolio showcasing my projects and skills"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Professional portfolio showcasing my projects and skills"
+    />
+    <meta name="twitter:image" content="" />
+
+    <title id="page-title">Portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="alternate icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="favicon.svg" />
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class="font-body antialiased">
-    <div id="root">
-      <div class="flex h-screen items-center justify-center">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="lucide lucide-loader-circle h-12 w-12 animate-spin text-primary"
-        >
-          <path d="M21 12a9 9 0 1 1-6.219-8.56"></path>
-        </svg>
+  <body>
+    <!-- Loading Spinner -->
+    <div id="loading" class="loading">
+      <div class="spinner"></div>
+      <p id="loading-text">Loading...</p>
+    </div>
+
+    <!-- Header -->
+    <header class="header">
+      <nav class="nav">
+        <div class="nav-brand">
+          <h1 id="nav-title">Portfolio</h1>
+        </div>
+        <div class="nav-controls">
+          <button id="lang-es" class="lang-btn" title="Español">🇪🇸</button>
+          <button id="lang-en" class="lang-btn" title="English">🇬🇧</button>
+          <button id="theme-toggle" class="theme-toggle" title="Toggle theme">
+            🌙
+          </button>
+        </div>
+      </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main class="main">
+      <!-- Hero Section -->
+      <section class="hero" id="about">
+        <div class="container">
+          <div class="hero-content">
+            <div class="hero-avatar">
+              <img
+                id="user-avatar"
+                src=""
+                alt="Profile Picture"
+                class="avatar"
+              />
+            </div>
+            <div class="hero-text">
+              <h1 id="hero-greeting" class="hero-title">Hello!</h1>
+              <h2 id="user-name" class="hero-name">Developer</h2>
+              <p id="user-bio" class="hero-bio">Loading bio...</p>
+              <div class="hero-links" id="hero-links">
+                <!-- Dynamic links will be inserted here -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- About Section -->
+      <section class="about" id="about-section">
+        <div class="container">
+          <h2 id="about-title" class="section-title">About Me</h2>
+          <div class="about-content">
+            <p id="about-text">
+              I'm a passionate developer who loves creating amazing digital
+              experiences.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Projects Section -->
+      <section class="projects" id="projects">
+        <div class="container">
+          <h2 id="projects-title" class="section-title">Projects</h2>
+          <div id="projects-grid" class="projects-grid">
+            <!-- Dynamic projects will be inserted here -->
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section class="contact" id="contact">
+        <div class="container">
+          <h2 id="contact-title" class="section-title">Contact</h2>
+          <div class="contact-content">
+            <div id="contact-info" class="contact-info">
+              <!-- Dynamic contact info will be inserted here -->
+            </div>
+            <form class="contact-form" id="contact-form">
+              <div class="form-group">
+                <label for="contact-name" id="form-name-label">Name</label>
+                <input type="text" id="contact-name" name="name" required />
+              </div>
+              <div class="form-group">
+                <label for="contact-email" id="form-email-label">Email</label>
+                <input type="email" id="contact-email" name="email" required />
+              </div>
+              <div class="form-group">
+                <label for="contact-message" id="form-message-label"
+                  >Message</label
+                >
+                <textarea
+                  id="contact-message"
+                  name="message"
+                  rows="5"
+                  required
+                ></textarea>
+              </div>
+              <button type="submit" id="form-submit" class="btn btn-primary">
+                Send Message
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <p id="footer-text">
+          &copy; 2025 Portfolio. Built with ❤️ using GitHub API.
+        </p>
       </div>
-    </div>
-    <div
-      role="region"
-      aria-label="Notifications (F8)"
-      tabindex="-1"
-      style="pointer-events: none"
-    >
-      <ol
-        tabindex="-1"
-        class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
-      ></ol>
-    </div>
-    <script src="javascript.js"></script>
+    </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
