Add bilingual portfolio with file-based content system and improved styling

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
       rel="stylesheet"
     />
 
+    <!-- Flag Icons CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.2.3/css/flag-icons.min.css"
+    />
+
+    <!-- Font Awesome for GitHub icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -64,8 +76,12 @@
           <h1 id="nav-title">Portfolio</h1>
         </div>
         <div class="nav-controls">
-          <button id="lang-es" class="lang-btn" title="Español">🇪🇸</button>
-          <button id="lang-en" class="lang-btn" title="English">🇬🇧</button>
+          <button id="lang-es" class="lang-btn" title="Español">
+            <span class="fi fi-es"></span>
+          </button>
+          <button id="lang-en" class="lang-btn" title="English">
+            <span class="fi fi-gb"></span>
+          </button>
           <button id="theme-toggle" class="theme-toggle" title="Toggle theme">
             🌙
           </button>
